fix chrome layout bug

--- a/challenge_open/app/styles/main.css
+++ b/challenge_open/app/styles/main.css
@@ -3,7 +3,7 @@ html, body {
   padding: 0;
   height: 100%;
   overflow: hidden;
-  position: fixed;
+  /*position: fixed;*/
 }
 
 body {
